<resources>
    <string name="app_name">SmartCan</string>
    <string name="agree">agree</string>
    <string name="cancel">cancel</string>
    <string name="permission_comfirm">permission request</string>
    <string name="require_permission">This app needs access to these permissions.</string>
    <string name="splash_title">smart gabage can controller</string>
    <string name="login">login</string>
    <string name="serial_fail">serialport connect fail</string>
    <string name="serial_success">serialport connect success</string>
    <string name="setting_can">setting your smart can</string>
    <string name="input_baudrate">input baudrate</string>
    <string name="connect">connect</string>
    <string name="connecting">connecting...</string>
    <string name="connect_success">success</string>
    <string name="connect_fail">fail</string>
    <string name="choosestate">choose state</string>
    <string name="setting_param">setting data</string>
    <string name="no_wechat">you haven\'t install wechat yet</string>
    <string name="share_text_friend">share text to friend</string>
    <string name="share_mini_friend">share mini program to friend</string>
    <string name="three_applaud">thumb up,award,follow</string>
    <string name="agreement">user agreement</string>
    <string name="noserialport">no vailable serialport</string>
    <string name="chooseserialport">choose serialport</string>
    <string name="mainac_hello">hello,scan QRCode to gain score</string>
    <string name="help">help</string>
    <string name="garbage_data">garbage data</string>
    <string name="temprature">temp</string>
    <string name="water">water</string>
    <string name="weight">weight</string>
    <string name="fire">fire</string>
    <string name="garbage_state">garbage state:</string>
    <string name="online">good</string>
    <string name="garbage_close">garbage close</string>
    <string name="scan_on">scan on</string>
    <string name="touchtoopen">touch to open</string>
    <string name="wechatscan">use wechat to scan QRCode or open APP</string>
    <string name="input_phone">input phone number</string>
    <string name="recycle">recycle</string>
    <string name="kitchen">kitchen</string>
    <string name="other">other</string>
    <string name="harmful">harmful</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="inputaccount">input account</string>
    <string name="inputpassword">input password</string>
    <string name="loginaccount">login account...</string>
    <string name="success">success</string>
    <string name="fail">fail</string>
    <string name="code">code:</string>
    <string name="full">full</string>
    <string name="touchtoclose">touch to close</string>
    <string name="coder_tune">coder tune</string>
    <string name="clear">clear</string>
    <string name="phonetypeerror">number error</string>
    <string name="username">user name</string>
    <string name="phone">phone:</string>
    <string name="score">score</string>
    <string name="hourperone">one score per an hour</string>
    <string name="scanQRCode">scan QR code</string>
    <string name="check_success">check success</string>
    <string name="overweight">overweight</string>
    <string name="high_temp">high temp</string>
</resources>