<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background1"
    tools:context=".activity.SettingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="2">

            <TextView
                android:id="@+id/setting_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:layout_gravity="right"
                android:layout_margin="10dp"
                android:textColor="@color/stringcolor_grey"
                android:textSize="12sp" />

            <com.maple.smartcan.view.PercentLinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.percentlayout.widget.PercentFrameLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_heightPercent="50%"
                    app:layout_widthPercent="100%">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:src="@drawable/garbage_transparent"
                        app:layout_heightPercent="100%"
                        app:layout_widthPercent="50%" />
                </androidx.percentlayout.widget.PercentFrameLayout>

                <androidx.percentlayout.widget.PercentFrameLayout
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_heightPercent="50%"
                    app:layout_widthPercent="100%">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/setting_can"
                        android:textColor="@color/stringcolor_black"
                        android:textSize="30sp"
                        android:textStyle="bold" />
                </androidx.percentlayout.widget.PercentFrameLayout>

            </com.maple.smartcan.view.PercentLinearLayout>
        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_pane"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/choosestate"
                    android:textColor="@color/stringcolor_black"
                    android:textSize="20sp" />

                <com.scwang.smartrefresh.layout.SmartRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/setting_refreshlayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    tools:ignore="RedundantNamespace">

                    <ListView
                        android:id="@+id/setting_listview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:listSelector="#fff"
                        android:overScrollMode="never" />

                    <com.scwang.smartrefresh.layout.footer.BallPulseFooter
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srlAnimatingColor="@color/background1" />
                </com.scwang.smartrefresh.layout.SmartRefreshLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_pane"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/setting_param"
                    android:textColor="@color/stringcolor_black"
                    android:textSize="20sp" />

                <com.scwang.smartrefresh.layout.SmartRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/setting_datapane"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="15dp"
                    tools:ignore="RedundantNamespace">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <FrameLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1" />

                            <EditText
                                android:id="@+id/setting_inputbaudrate"

                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_weight="2"
                                android:background="@drawable/round_edittext"
                                android:hint="@string/input_baudrate"
                                android:text="115200"
                                android:inputType="number"
                                android:padding="10dp"
                                android:textColor="@color/stringcolor_black"
                                android:textCursorDrawable="@drawable/cursor"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <FrameLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1" />
                        </LinearLayout>

                        <Button
                            android:id="@+id/setting_connect"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="30dp"
                            android:background="@drawable/round_edittext"
                            android:padding="10dp"
                            android:text="@string/connect"
                            android:textColor="@color/stringcolor_grey"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <com.scwang.smartrefresh.layout.footer.BallPulseFooter
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:srlAnimatingColor="@color/background1" />
                </com.scwang.smartrefresh.layout.SmartRefreshLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/refreshState"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/refresh"
        android:layout_gravity="bottom"
        android:layout_margin="20dp"/>
</FrameLayout>